--- a/Assignment 3/Assignment 3.qmd
+++ b/Assignment 3/Assignment 3.qmd
@@ -163,7 +163,7 @@ for (col_name in names(train_clean)) {
 # Subset the data to remove outliers in any numeric column
 train_clean_no_outliers <- train_clean[rows_to_keep, ]
 
-#KNN regression 
+#KNN regression without the outliers
 library(kknn)
 
 model <- train.kknn(
@@ -174,6 +174,19 @@ model <- train.kknn(
 
 pred <- predict(model, newdata =test)
 
+#KNN regression with the outliers
+
+model <- train.kknn(
+  score ~ .,
+  data = train_clean,
+  kmax = 10
+)
+
+pred_with_outliers <- predict(model, newdata =test)
+
+#Check the impact of outliers
+differences <- pred - pred_with_outliers
+summary(differences)
 
 
 ```
