Add Yara Yachnyk to authors list

--- a/Assignment 3/Assignment 3.qmd
+++ b/Assignment 3/Assignment 3.qmd
@@ -4,6 +4,7 @@ author:
   - Osaro Orebor 1168827
   - Máté Csikós-Nagy 4395565
   - Fani Profiti 1240390
+  - Yara Yachnyk 4913329
 format:
   html:
     toc: true
