--- a/Assignment 3/Assignment 3.qmd
+++ b/Assignment 3/Assignment 3.qmd
@@ -4,6 +4,8 @@ author:
   - Osaro Orebor 1168827
   - Máté Csikós-Nagy 4395565
   - Fani Profiti 1240390
+  - Yara Yachnyk 4913329
+  - Niels Wagenaar 3133998
 format:
   html:
     toc: true
@@ -25,6 +27,7 @@ library(readr)
 library(corrplot)
 library(GGally)
 library(janitor)
+library(caTools)
 ```
 
 ```{r}
@@ -123,7 +126,20 @@ boxplot(train_clean[, numeric_cols],
 
 numeric_cols
 ```
+# Train test split
+```{r}
+set.seed(123)
 
+#first split the full data set in a 80/20 test train set
+split1 <- sample.split(train_cleaned$score, SplitRatio = 80)
+train_data <- subset(train_cleaned, split1 == TRUE)
+test_val_data <- subset(train_cleaned, split1 == False)
+
+#then split the test val data 50/50 so they both become 10% of the full dataset
+split2 <- sample.split(test_val_data$score, SplitRatio = 50)
+test_data <- subset(test_val_data, split2 == TRUE)
+validation_data <- subset(test_val_data, split2 == False)
+```
 # Model description
 
 ### Linear regression
