Improve data description and fix typos
Revised the data description for clarity and corrected minor typographical errors.

--- a/Assignment 3/Assignment 3.qmd
+++ b/Assignment 3/Assignment 3.qmd
@@ -41,7 +41,7 @@ test <- readRDS("test.rds")
 # Data description
 
 Describe the data and use a visualization to support your story. (approx. one or two paragraphs)
-The dataset represents the characteristics of the secondary school students and additional information about their family background with their specific profile information, such as age, education of male or female partent etc..; It has a selection of categorical (factor) (such as school, sex, adress..) and continuous (numeric) quantitative variables such as age, male education, internet etc, the mix of which is well suited for regression or classification tasks, in our case useful framework(regression for continuous variable score) to predict performance of students. The split between males and females is relatively equal (Female: 173, Male: 143). The score range volatiles from -2.71 to 2.23, which shows that the variable is standardized, perhaps the formula (raw_score-mean/sd) was implied for better interpretation of students' results. Based on the graph below, majority of students have the score below the norm(-0.4 in our case), but most of scores are centered around +-1, shocasing normal average performance. Scores close to -3 to 2.5 are in minority and are considered outliers from students' norm. 
+The dataset represents the characteristics of the secondary school students and additional information about their family background with their specific profile information, such as age, education of male or female partent etc..; It has a selection of categorical (factor) (such as school, sex, adress..) and continuous (numeric) quantitative variables such as age, male education, internet etc, the mix of which is well suited for regression or classification tasks, in our case useful framework(regression for continuous variable score) to predict performance of students. The split between males and females is relatively equal (Female: 173, Male: 143). The score range volatiles from -2.71 to 2.23, which shows that the variable is standardized, implying the formula (raw_score-mean/sd) was implied for better interpretation of students' results. Based on the graph below, majority of students have the score below the norm(-0.4 in our case), but most of scores are centered around +-1, shocasing normal average performance. Scores close to -3 to 2.5 are in minority and are considered outliers from students' norm. 
 Since we make prediction on score, in test set we do not include this variable and train the dataset based on the other characteristics to then try to predict for those test observations. 
 
 ```{r}
